[gd_scene load_steps=19 format=3 uid="uid://cs0os6w6n40w6"]

[ext_resource type="PackedScene" uid="uid://0n5kcw8f6ntr" path="res://assets/actors/crabbo/crabbo.blend" id="1_7hqhc"]
[ext_resource type="Script" path="res://scripts/ai/basic_ai.gd" id="1_s5u4j"]
[ext_resource type="Resource" uid="uid://rp04ot2ba6yt" path="res://scripts/move_states/run.tres" id="2_81rg3"]
[ext_resource type="Script" path="res://scripts/nodes/move_controller.gd" id="3_fi5g2"]
[ext_resource type="Resource" uid="uid://sy1amvuhsyeo" path="res://scripts/move_states/idle.tres" id="3_gmtjk"]
[ext_resource type="Script" path="res://scripts/nodes/animation_controller.gd" id="4_0hrvt"]
[ext_resource type="Resource" uid="uid://dom41en6j6htm" path="res://scripts/player_states/neutral.tres" id="4_wpjma"]
[ext_resource type="Resource" uid="uid://gn7fl86jhk5x" path="res://scripts/ai/ai_states/idle.tres" id="4_wwcp3"]
[ext_resource type="Resource" uid="uid://ctsfymsid3bd6" path="res://scripts/ai/ai_states/pursuit.tres" id="5_5uimy"]
[ext_resource type="Script" path="res://scripts/nodes/health.gd" id="10_jinnk"]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_2ega0"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_h8thn"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vuh2b"]
animation = &"Run"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_3ltxe"]
blend_point_0/node = SubResource("AnimationNodeAnimation_h8thn")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_vuh2b")
blend_point_1/pos = 1.0
min_space = 0.0
snap = 1.0

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_njux4"]
resource_local_to_scene = true
graph_offset = Vector2(-184.781, -3.13976)
nodes/move_anim_speed/node = SubResource("AnimationNodeTimeScale_2ega0")
nodes/move_anim_speed/position = Vector2(100, 80)
nodes/move_blend/node = SubResource("AnimationNodeBlendSpace1D_3ltxe")
nodes/move_blend/position = Vector2(-220, 120)
node_connections = [&"move_anim_speed", 0, &"move_blend", &"output", 0, &"move_anim_speed"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_dpi4b"]
radius = 1.219
height = 3.55415

[sub_resource type="SphereShape3D" id="SphereShape3D_1uqp7"]
radius = 25.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_qrlff"]
properties/0/path = NodePath("Health:current_health")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath("Health:max_health")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath(".:position")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:rotation")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:scale")
properties/4/spawn = true
properties/4/replication_mode = 2
properties/5/path = NodePath("MeshRoot/AnimationTree:parameters/move_blend/blend_position")
properties/5/spawn = true
properties/5/replication_mode = 2
properties/6/path = NodePath("MeshRoot/AnimationTree:parameters/move_anim_speed/scale")
properties/6/spawn = true
properties/6/replication_mode = 2

[node name="Enemy" type="CharacterBody3D"]
script = ExtResource("1_s5u4j")
move_states = {
"idle": ExtResource("3_gmtjk"),
"run": ExtResource("2_81rg3")
}
ai_states = {
"idle": ExtResource("4_wwcp3"),
"pursuit": ExtResource("5_5uimy")
}
current_ai_state = ExtResource("4_wwcp3")

[node name="MeshRoot" parent="." instance=ExtResource("1_7hqhc")]
unique_name_in_owner = true

[node name="Skeleton3D" parent="MeshRoot/Armature" index="0"]
bones/7/rotation = Quaternion(0.267082, 0.654727, 0.654727, -0.267082)
bones/8/rotation = Quaternion(0, 0, 0.00537616, 0.999986)
bones/9/rotation = Quaternion(0, 0, 0.00636085, 0.99998)
bones/10/rotation = Quaternion(0, 0, -0.00959423, 0.999954)
bones/20/rotation = Quaternion(0, 0, 0.0171402, 0.999853)
bones/21/rotation = Quaternion(0, 0, 0.00636097, 0.99998)
bones/31/rotation = Quaternion(-0.267082, 0.654727, 0.654727, 0.267082)
bones/32/rotation = Quaternion(0, 0, -0.00537616, 0.999986)
bones/33/rotation = Quaternion(0, 0, -0.00636085, 0.99998)
bones/34/rotation = Quaternion(0, 0, 0.00959423, 0.999954)
bones/35/rotation = Quaternion(0.691444, 0.0059263, -0.0283209, 0.721851)
bones/36/rotation = Quaternion(0.00347841, -0.000240576, 0.00637233, 0.999974)
bones/37/rotation = Quaternion(-0.00943603, -0.0022614, -0.691509, 0.722303)
bones/38/rotation = Quaternion(-0.00322838, -0.00266722, 0.0202643, 0.999786)
bones/39/rotation = Quaternion(-0.700723, -0.00558585, -0.011333, 0.713322)
bones/40/rotation = Quaternion(0.00909526, 0.000256773, -0.0060638, 0.99994)
bones/42/rotation = Quaternion(-0.0112318, -0.0177249, 0.0211156, 0.999557)
bones/44/rotation = Quaternion(0, 0, -0.0171402, 0.999853)
bones/45/rotation = Quaternion(0, 0, -0.00636097, 0.99998)

[node name="AnimationTree" type="AnimationTree" parent="MeshRoot"]
tree_root = SubResource("AnimationNodeBlendTree_njux4")
anim_player = NodePath("../AnimationPlayer")
parameters/move_anim_speed/scale = 1.0
parameters/move_blend/blend_position = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.68466, 0)
shape = SubResource("CapsuleShape3D_dpi4b")

[node name="MoveController" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_fi5g2")
current_player_state = ExtResource("4_wpjma")
old_player_state = ExtResource("4_wpjma")

[node name="AnimController" type="Node" parent="." node_paths=PackedStringArray("anim_tree")]
unique_name_in_owner = true
script = ExtResource("4_0hrvt")
anim_tree = NodePath("../MeshRoot/AnimationTree")

[node name="DetectionRadius" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionRadius"]
shape = SubResource("SphereShape3D_1uqp7")

[node name="Health" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("10_jinnk")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_qrlff")

[connection signal="move_state_set" from="MoveController" to="AnimController" method="_on_set_move_state"]
[connection signal="body_entered" from="DetectionRadius" to="." method="_on_body_entered"]
[connection signal="body_exited" from="DetectionRadius" to="." method="_on_body_exited"]
[connection signal="health_changed" from="Health" to="." method="_on_health_changed"]

[editable path="MeshRoot"]
